[package]
name = "nike-os"
version = "0.1.0"
edition = "2021"

[dependencies.aster-frame]
path = "../asterinas/framework/aster-frame" 

[dependencies.align_ext]
path = "../asterinas/framework/libs/align_ext" 

[dependencies.ktest]
path = "../asterinas/framework/libs/ktest" 

[workspace]
exclude = ["target/osdk/base"]
